fixed image size bug on smaller screen

--- a/src/Components/Services/serviceStyle.css
+++ b/src/Components/Services/serviceStyle.css
@@ -89,6 +89,9 @@ justify-content: center;
 }
 
 @media (max-width: 808px) {
+    .servicePicture{
+        width: 300px;
+    }
     .serviceContent {
         flex-direction: column;
         align-items: flex-start; 
